# oxide

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
.oxide/: hooks.toml
.oxide/commands/: commit.md  explain.md  review.md  test.md
crates/oxide-cli/: Cargo.toml
crates/oxide-cli/src/: main.rs
crates/oxide-config/: Cargo.toml
crates/oxide-config/src/: lib.rs
crates/oxide-core/: Cargo.toml  oxide.toml
crates/oxide-core/src/: automation.rs  browser.rs  commands.rs  context.rs  context_checkpoint.rs  db.rs  embed.rs  git_tools.rs  hooks.rs  index.rs  lib.rs  memory.rs  ptc.rs  sandbox.rs  store.rs  tools.rs
crates/oxide-core/tests/: turn_loop.rs
crates/oxide-design/: Cargo.toml
crates/oxide-design/src/: lib.rs
crates/oxide-desktop/: Cargo.toml
crates/oxide-desktop/src/: lib.rs
crates/oxide-frontend/: Cargo.toml
crates/oxide-frontend/src/: lib.rs
crates/oxide-gui/: Cargo.toml
crates/oxide-gui/assets/: style.css  wterm.bundle.js  wterm.css
crates/oxide-gui/src/: board.rs  hermes.rs  lib.rs  preview_proxy.rs  update.rs
crates/oxide-harness/: Cargo.toml
crates/oxide-harness/src/: lib.rs
crates/oxide-mcp/: Cargo.toml
crates/oxide-mcp/src/: http.rs  lib.rs  stdio.rs
crates/oxide-protocol/: Cargo.toml
crates/oxide-protocol/src/: lib.rs
crates/oxide-providers/: Cargo.toml
crates/oxide-providers/src/: anthropic.rs  catalog.rs  chatgpt.rs  cli.rs  lib.rs  openai.rs
crates/oxide-term/: Cargo.toml  README.md
crates/oxide-term/src/: main.rs
crates/oxide-tui/: Cargo.toml
crates/oxide-tui/src/: lib.rs
docs/: chatgpt-subscription-streaming.md  claude-streaming-architecture.md  cursor-3-agent-mode-design.md  cursor-agent-chat-sessions.md  gui-visual-qa-checklist.md  oxide-total-audit-2026-06-22.md
harnesses/: coding.toml  debug.toml  reviewer.toml
scripts/: dev-build.sh  dmg-bg.py  gui-native-visual-record.py  gui-native-visual-smoke.py  gui-visual-qa.py  make-cert.sh  make-dmg.sh
