[package]
name = "oxide-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "The `oxide` binary — dispatches subcommands over the shared engine."

[[bin]]
name = "oxide"
path = "src/main.rs"

[dependencies]
oxide-core = { workspace = true }
oxide-config = { workspace = true }
oxide-harness = { workspace = true }
oxide-providers = { workspace = true }
oxide-protocol = { workspace = true }
oxide-frontend = { workspace = true }
oxide-tui = { workspace = true }
oxide-gui = { workspace = true }
oxide-desktop = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
tracing-subscriber = { workspace = true }
