[package]
name = "oxide-config"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Layered TOML configuration for Oxide."

[dependencies]
oxide-protocol = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
