[package]
name = "oxide-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "The Oxide engine: a frontend-agnostic async submit/event agent loop. Reusable library that TUI, GUI, headless and RPC frontends all drive."

[dependencies]
oxide-design = { workspace = true }
oxide-protocol = { workspace = true }
oxide-config = { workspace = true }
oxide-harness = { workspace = true }
oxide-providers = { workspace = true }
oxide-mcp = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
similar = { workspace = true }
toml = { workspace = true }
chromiumoxide = { workspace = true }
model2vec-rs = "0.2.1"
libc = "0.2.186"
rusqlite = { version = "0.40.1", features = ["bundled"] }
turso = { version = "0.7.0-pre.10", default-features = false }

[dev-dependencies]
image = { workspace = true }
