[package]
name = "oxide-design"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Rust-native design contracts, DESIGN.md parsing, token extraction, and visual review helpers for Oxide."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
