[package]
name = "oxide-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Rust-native desktop command center for Oxide."

[dependencies]
oxide-core = { workspace = true }
oxide-config = { workspace = true }
oxide-protocol = { workspace = true }
eframe = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
image = { workspace = true }
