[package]
name = "oxide-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Desktop GUI for Oxide (Dioxus) — a Cursor-style single-agent chat over the shared engine."

[dependencies]
oxide-core = { workspace = true }
oxide-config = { workspace = true }
oxide-protocol = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true }
rfd = { workspace = true }
toml = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
self-replace = { workspace = true }
portable-pty = { workspace = true }
dioxus = { version = "0.6", features = ["desktop"] }
