[package]
name = "oxide-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Model Context Protocol client for Oxide — consume external tool servers over stdio JSON-RPC, surfaced as native tools."

[dependencies]
oxide-protocol = { workspace = true }
tokio = { workspace = true, features = ["io-util"] }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
