[package]
name = "oxide-providers"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "LLM provider abstraction for Oxide (streaming): Echo stub + OpenAI + Anthropic, hand-rolled over reqwest+SSE."

[dependencies]
oxide-protocol = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["io-util"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
eventsource-stream = { workspace = true }
futures = { workspace = true }
