[package]
name = "oxide-providers"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "LLM provider abstraction for Oxide (streaming): Echo stub + OpenAI + Anthropic, hand-rolled over reqwest+SSE."

[dependencies]
oxide-protocol = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["io-util"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
eventsource-stream = { workspace = true }
futures = { workspace = true }
portable-pty = { workspace = true }
sha2 = { workspace = true }

# killpg(2): kill the CLI driver's whole process group on interrupt so a build
# (or other grandchild) it spawned dies with it instead of being orphaned.
[target.'cfg(unix)'.dependencies]
libc = "0.2"
