[package]
name = "oxide-term"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Native GPU (wgpu/Metal) terminal for Oxide — alacritty_terminal core + glyphon text + portable-pty."

[[bin]]
name = "oxide-term"
path = "src/main.rs"

[dependencies]
# GPU + window + text
wgpu = "29"
winit = "0.30"
glyphon = "0.11"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }
# Terminal emulation core (grid + VTE state machine) — same crate Zed uses.
alacritty_terminal = "0.26"
# Cross-platform PTY (same crate the Oxide GUI already uses).
portable-pty = "0.9"
anyhow = "1"

[profile.release]
opt-level = 3
