[package]
name = "oxide-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Terminal UI for Oxide (ratatui + crossterm), implementing the oxide-frontend contract."

[dependencies]
serde_json = { workspace = true }
oxide-core = { workspace = true }
oxide-protocol = { workspace = true }
oxide-frontend = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
# unstable-rendered-line-info exposes Paragraph::line_count so the transcript can
# scroll by exact wrapped-row count (word wrap makes logical≠visual line counts).
ratatui = { workspace = true, features = ["unstable-rendered-line-info"] }
crossterm = { workspace = true }
futures = { workspace = true }
